# web-common/src/models/StatusCounts.ts
@@ -1,0 +1,100 @@
+// tslint:disable
+/**
+ * Evaluation
+ * This API descripes the online evaluation service, as accessed by the user and organizers.
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface StatusCounts
+ */
+export interface StatusCounts  {
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    terms?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    tutors?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    options?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    profs?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    courseprofs?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    courses?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    questionaires?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusCounts
+     */
+    singleanswers?: number;
+}
+
+export function StatusCountsFromJSON(json: any): StatusCounts {
+    return {
+        'terms': !exists(json, 'terms') ? undefined : json['terms'],
+        'tutors': !exists(json, 'tutors') ? undefined : json['tutors'],
+        'options': !exists(json, 'options') ? undefined : json['options'],
+        'profs': !exists(json, 'profs') ? undefined : json['profs'],
+        'courseprofs': !exists(json, 'courseprofs') ? undefined : json['courseprofs'],
+        'courses': !exists(json, 'courses') ? undefined : json['courses'],
+        'questionaires': !exists(json, 'questionaires') ? undefined : json['questionaires'],
+        'singleanswers': !exists(json, 'singleanswers') ? undefined : json['singleanswers'],
+    };
+}
+
+export function StatusCountsToJSON(value?: StatusCounts): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    return {
+        'terms': value.terms,
+        'tutors': value.tutors,
+        'options': value.options,
+        'profs': value.profs,
+        'courseprofs': value.courseprofs,
+        'courses': value.courses,
+        'questionaires': value.questionaires,
+        'singleanswers': value.singleanswers,
+    };
+}
+
+
