# web-common/src/models/StatusSysstats.ts
@@ -1,0 +1,68 @@
+// tslint:disable
+/**
+ * Evaluation
+ * This API descripes the online evaluation service, as accessed by the user and organizers.
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface StatusSysstats
+ */
+export interface StatusSysstats  {
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusSysstats
+     */
+    ram?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusSysstats
+     */
+    ram10?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusSysstats
+     */
+    cpu?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof StatusSysstats
+     */
+    cpu10?: number;
+}
+
+export function StatusSysstatsFromJSON(json: any): StatusSysstats {
+    return {
+        'ram': !exists(json, 'ram') ? undefined : json['ram'],
+        'ram10': !exists(json, 'ram10') ? undefined : json['ram10'],
+        'cpu': !exists(json, 'cpu') ? undefined : json['cpu'],
+        'cpu10': !exists(json, 'cpu10') ? undefined : json['cpu10'],
+    };
+}
+
+export function StatusSysstatsToJSON(value?: StatusSysstats): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    return {
+        'ram': value.ram,
+        'ram10': value.ram10,
+        'cpu': value.cpu,
+        'cpu10': value.cpu10,
+    };
+}
+
+
