# web-common/src/models/index.ts
@@ -18,6 +18,9 @@ export * from './Result';
 export * from './ResultPair';
 export * from './ResultSection';
 export * from './Section';
+export * from './Status';
+export * from './StatusCounts';
+export * from './StatusSysstats';
 export * from './Term';
 export * from './TermReport';
 export * from './Tutor';
